kubernetes/talos/deploy/mosquitto/ingressroutetcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mqtt-ingress
  annotations: 
    kubernetes.io/ingress.class: internal
spec:
  entryPoints:
    - mqtt
  routes:
  - match: HostSNI(`*`)
    priority: 10
    services:
    - name: mosquitto
      port: 1883
      weight: 10
      terminationDelay: 400
